<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_bot"
    tools:context="com.myfirstgame.rico.gameedu.MainMenu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/no1"
            android:contentDescription="@string/number_1_picture" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/addition"
            android:contentDescription="@string/addition_picture" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/no3"
            android:contentDescription="@string/number_3_picture" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/equal"
            android:contentDescription="@string/equal_picture" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/question"
            android:contentDescription="@string/question_mark_picture" />

    </LinearLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="playGame"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/play_text" />


    <Button
        android:id="@+id/howToButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:gravity="center"
        android:onClick="instructionButton"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/how_to_text" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="exitProgram"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/exit_text" />

</LinearLayout>
