<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal" >


    <ImageButton
        android:id="@+id/leaderboardsButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@null"
        android:src="@drawable/leaderboard"
        android:contentDescription="@string/leaderboards_button" />

    <TextView
        android:id="@+id/title_text"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:layout_toEndOf="@id/leaderboardsButton"
        android:layout_toStartOf="@+id/settingButton"
        android:textStyle="bold" />

    <ImageButton
        android:id="@id/settingButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@null"
        android:src="@drawable/custom_setting"
        android:contentDescription="@string/setting_button" />

</RelativeLayout>